[package]
name = "infra-utils"
version = "0.1.0"
authors = ["sutr-app"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.8" }
bytes = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.19", features = ["rt_tokio_1", "cluster"] }
debug_stub_derive = "0.3"
envy = "0.4"
flume = { version = "0.11", default-features = false, features = [
    "async",
    "select",
] }
futures = "0.3"
http = "1"
itertools = "0.14"
log = "0.4"
once_cell = "1.19"
opentelemetry = { version = "0.29", features = ["metrics", "trace"] }
prost = "0.13"
readability = { version = "0.3" }
redis = { version = "0.28", features = [
    "tokio-rustls-comp",
    "ahash",
    "cluster-async",
] }
regex = "1.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_29"] }
robotstxt = "0.3"
rustls = { version = "0.23", features = ["ring"] } # redis rustls
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "3.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "mysql",
    "postgres",
    "sqlite",
] }
stretto = { version = "0.8", features = ["async"] }
strum = "0.27"
strum_macros = "0.27"
thirtyfour = "0.34"
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
tonic-web = { version = "0.13" }
tokio = { version = "1", features = [
    "full",
    # "macros",
    # "rt-multi-thread",
    # "signal",
    # "sync",
    # "time",
    # "process",
    # "parking_lot",
] }
tokio-stream = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
url = "2"
unicode-normalization = "0.1"

[dev-dependencies]
itertools = "0.14"

[features]
default = []
redis-test = []
redis-cluster-test = []
# must be enabled at least one of the following features to use sqlx
mysql = []
postgres = []
