[package]
name = "infra-utils"
version = "0.1.0"
authors = ["sutr-app"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
async-trait = "0.1"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.22", features = ["rt_tokio_1", "cluster"] }
debug_stub_derive = "0.3"
envy = "0.4"
futures = "0.3"
log = "0.4"
once_cell = "1.19"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
redis = { version = "0.32", features = [
    "tokio-rustls-comp",
    "ahash",
    "cluster-async",
] }
serde = "1.0"
serde_derive = "1.0"
#serde_with = "3.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "mysql",
    "postgres",
    "sqlite",
] }
tokio = { version = "1", features = [
    "full",
    # "macros",
    # "rt-multi-thread",
    # "signal",
    # "sync",
    # "time",
    # "process",
    # "parking_lot",
] }
tracing = "0.1"
url = "2"

[dev-dependencies]
itertools = "0.14"
serde_json = "1.0"

[features]
default = []
redis-test = []
redis-cluster-test = []
# must be enabled at least one of the following features to use sqlx
mysql = []
postgres = []
